--- a/src/components/ProjectsShowcase.astro
+++ b/src/components/ProjectsShowcase.astro
@@ -1,10 +1,11 @@
 ---
-import type { CollectionEntry } from 'astro:content'
-import ProjectCard from './ProjectCard.astro';
-import ProjectThumbnail from './ProjectThumbnail.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import type { CollectionEntry } from 'astro:content';
+
 import Icon from './icon/Icon.astro';
+import ProjectCard from './ProjectCard.astro';
 import ProjectContext from './ProjectContext.astro';
+import ProjectThumbnail from './ProjectThumbnail.astro';
 
 interface Props {
   projects: CollectionEntry<'projects'>[]
@@ -14,56 +15,67 @@ const pageLang = getLangFromUrl(Astro.url);
 const t = useTranslations(pageLang);
 
 const {
-  projects
+  projects,
 } = Astro.props;
+
+const clearLogosMap: { [key: string]: boolean } = {
+  budmin: true,
+};
 
 const projectsWithRef = projects.map((project) => {
   const { id } = project;
-  const projectHref = `/${pageLang}/project/${id.split('/').slice(1)}`
+  const projectHref = `/${pageLang}/project/${id.split('/').slice(1)}`;
+  const normalizedProjectName = project.data.projectName.toLowerCase();
+
   return {
     ...project,
-    projectHref
-  }
-})
+    projectHref,
+    darkLogo: normalizedProjectName in clearLogosMap,
+  };
+});
 ---
-<section id="project-selector-carousel" class="splide projectsShowcase relative" aria-label={t('projects.mainCarousel.aria')}>
-  <div class="splide__arrows projectsShowcase__arrows">
-    <button class="splide__arrow splide__arrow--prev projectsShowcase__arrow projectsShowcase__arrow--prev">
-      <Icon variant='ChevronRight' />
-    </button>
-    <button class="splide__arrow splide__arrow--next projectsShowcase__arrow projectsShowcase__arrow--next">
-      <Icon variant='ChevronRight' />
-    </button>
-  </div>
-  <div class="splide__track projectsShowcase__gallery">
-    <ul class="splide__list restarted-list">
-      {
-        projectsWithRef.map((project) => (
-          <li class="splide__slide projectsShowcase__listItem">
-            <ProjectCard project={project}/>
-          </li>
-        ))
-      }
-    </ul>
-  </div>
-  <div class="projectsShowcase__data-container relative">
-    <ul class="thumbnails projectsShowcase__thumbnails restarted-list" id="thumbnails">
-      {
-        projectsWithRef.map((project, i) => (
-          <li
-            class="thumbnail projectsShowcase__thumbnail"
-            tabindex="0"
-            aria-controls={`project-selector-carousel-slide0${i + 1}`}
-            aria-label={t('projects.mainCarousel.thumbnail.construelectricjv')}
-          >
-            <ProjectThumbnail project={project} />
-          </li>
-        ))
-      }
-    </ul>
+<section class="projectsShowcase relative">
+  <div id="project-selector-carousel" class="splide projectsShowcase__galleries" aria-label={t('projects.mainCarousel.aria')}>
+    <div class="splide__track">
+      <ul class="splide__list restarted-list">
+        {
+          projectsWithRef.map((project) => (
+            <li class="splide__slide">
+              <ProjectCard project={project}/>
+            </li>
+          ))
+        }
+      </ul>
+    </div>
+  </div><!-- Galleries splide -->
+  <div class="projectsShowcase__data-container">
+    <section class="splide projectsShowcase__thumbnails restarted-list" id="thumbnail-carousel" aria-label="TODO">
+      <div class="splide__arrows projectsShowcase__thumbnails__arrows">
+        <button class="splide__arrow splide__arrow--prev projectsShowcase__thumbnails__arrow projectsShowcase__thumbnails__arrow--prev">
+          <Icon variant='ChevronRight' />
+        </button>
+        <button class="splide__arrow splide__arrow--next projectsShowcase__thumbnails__arrow projectsShowcase__thumbnails__arrow--next">
+          <Icon variant='ChevronRight' />
+        </button>
+      </div>
+      <div class="splide__track">
+        <ul class="splide__list">
+          {
+            projectsWithRef.map((project) => (
+              <li
+                class="splide__slide projectsShowcase__thumbnail"
+                aria-label={t('projects.mainCarousel.thumbnail.construelectricjv')}
+              >
+                <ProjectThumbnail project={project} darkLogo={project.darkLogo} />
+              </li>
+            ))
+          }
+        </ul><!-- Thumbnails Splide -->
+      </div>
+    </section>
     <section
-      id={`context-carousel`}
-      class="splide projectsShowcase__contextSplide"
+      id={'context-carousel'}
+      class="splide projectsShowcase__context"
       aria-label={t('project.context.aria')}
     >
       <div class="splide__track">
@@ -80,223 +92,190 @@ const projectsWithRef = projects.map((project) => {
           ))}
         </ul>
       </div>
-    </section>
+    </section><!-- Context Splide -->
   </div>
 </section>
 
 <script>
   import Splide from '@splidejs/splide'
 
-  const thumbnails = document.querySelectorAll<HTMLLIElement>('.thumbnail.projectsShowcase__thumbnail')
-
-  let currentThumbnail: HTMLLIElement | undefined
-
-  const showcaseSlider = new Splide("#project-selector-carousel", {
+  const galleriesSlider = new Splide("#project-selector-carousel", {
     pagination: false,
+    arrows: false,
     drag: false,
     type: 'fade'
+  })
+
+  const thumbnailSlider = new Splide("#thumbnail-carousel", {
+    perPage: 2,
+    rewind: true,
+    focus: 0,
+    isNavigation: true,
+    breakpoints: {
+      1023: {
+        perPage: 3,
+      },
+      375: {
+        perPage: 2,
+      }
+    }
   })
 
   const contextSlider = new Splide(`#context-carousel`, {
     pagination: false,
     arrows: false,
-    type: 'fade'
+    type: 'fade',
   })
 
-  contextSlider.on('mounted move', handleSlidesChange)
+  thumbnailSlider.on('pagination:mounted', (data) => {
+    data.list.classList.add('projectsShowcase__thumbnails__pagination')
 
-  function initThumbnail(thumbnail: HTMLLIElement, index: number) {
-    thumbnail.addEventListener('click', () => {
-      showcaseSlider.go(index)
-      contextSlider.go(index)
+    data.items.forEach((item) => {
+      item.button.classList.add('projectsShowcase__thumbnails__pagination__page')
+
+      item.li.classList.add('projectsShowcase__thumbnails__pagination__li')
     })
-  }
+  })
 
-  for (let i = 0; i < thumbnails.length; i++) {
-    initThumbnail(thumbnails[i], i)
-  }
+  galleriesSlider.sync(contextSlider)
+  galleriesSlider.sync(thumbnailSlider)
 
-  function handleSlidesChange() {
-    if (currentThumbnail) {
-      currentThumbnail.classList.remove('projectsShowcase__thumbnail--is-active')
-      currentThumbnail.removeAttribute('aria-current')
-    }
-
-    const newCurrentThumbnail = thumbnails[showcaseSlider.index]
-
-    if (newCurrentThumbnail) {
-      newCurrentThumbnail.classList.add('projectsShowcase__thumbnail--is-active')
-      newCurrentThumbnail.setAttribute('aria-current', 'true')
-      currentThumbnail = newCurrentThumbnail
-    }
-  }
-
-  showcaseSlider.on('mounted move', handleSlidesChange)
-  contextSlider.on('mounted move', handleSlidesChange)
-
-  showcaseSlider.sync(contextSlider)
-
-  showcaseSlider.mount()
+  galleriesSlider.mount()
+  thumbnailSlider.mount()
   contextSlider.mount()
 </script>
 
 <style lang="scss">
   .projectsShowcase {
-    display: flex;
-    flex-direction: column;
-
-    @include mediaq($bp-tablet) {
-      gap: rem(8);
+    @include mediaq($bp-small-pc) {
       display: grid;
-      grid-template-columns: 2fr 1fr;
+      grid-template-columns: 2fr minmax(370px, 1fr);
+      gap: rem(24);
     }
 
-    &__gallery {
-      border-radius: 8px 8px 0px 0px;
-      overflow: hidden;
-      border: 4px solid $primary-light-beige;
-
-      @include mediaq($bp-tablet) {
-        border-radius: 8px;
-        grid-column: 1 / 2;
-      }
-    }
-
-    &__contextSplide {
-      & * {
-        height: 100%;
-      }
-
-      @include mediaq($bp-tablet) {
-        display: block;
-        flex: 1;
-      }
-    }
-
-    &__data-container {
-      display: flex;
-      gap: rem(8);
-      flex-direction: column-reverse;
-
-      @include mediaq($bp-tablet) {
-        display: grid;
-        grid-template-rows: min-content 1fr;
-        gap: rem(8);
-      }
-    }
-
-    &__thumbnails {
-      display: flex;
-      justify-content: space-evenly;
+    &__galleries {
+      margin-bottom: rem(16);
+      outline: 2px solid $primary-light-beige;
+      background-color: $primary-light-beige;
       border-radius: 8px;
       overflow: hidden;
-      position: relative;
 
-      @include mediaq($bp-tablet) {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    &__arrows {
-      position: absolute;
-      top: unset;
-      width: 100%;
-      bottom: 0;
-      transform: unset;
-
-      @include mediaq($bp-tablet) {
-        top: 0;
-        bottom: unset;
-        right: 0;
-      }
-    }
-
-    &__arrow {
-      $translationX: 115%;
-      $translationY: -85%;
-      $arrow-size: rem(24);
-      $icon-size: rem(12);
-
-      @include flexCenter();
-      top: -$arrow-size;
-      width: $arrow-size;
-      height: $arrow-size;
-      padding: rem(4);
-      aspect-ratio: 1 / 1;
-      background-color: $primary-light-beige;
-      transition: all ease-in-out 100ms;
-      color: white;
-
-      & > :global(svg) {
-        width: $icon-size;
-        height: $icon-size;
+      @include mediaq($bp-small-pc) {
+        margin-bottom: 0;
       }
 
-      &--prev {
-        left: 0;
-        transform: translateX(-$translationX) translateY($translationY);
-
-        @include mediaq($bp-tablet) {
-          left: unset;
-          right: 0;
-          transform: translateX(-$translationX) translateY(-20%);
-        }
-      }
-      
-      &--next {
-        right: 0;
-        transform: translateX($translationX) translateY($translationY);
-
-        @include mediaq($bp-tablet) {
-          right: 0;
-          transform: translateY(-20%);
+      .splide {
+        &__list {
+          align-items: center;
         }
       }
     }
 
     &__thumbnail {
-      flex-grow: 1;
-      cursor: pointer;
+      opacity: 0.3;
+      transition: opacity 100ms;
+
+      &.is-active {
+        opacity: 1;
+      }
+    }
+
+    &__data-container {
+      @include mediaq($bp-small-pc) {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+
+    &__thumbnails {
       position: relative;
+      border-radius: 8px;
+      margin-bottom: rem(24);
 
-      & > :global(.projectThumbnail) {
-        transition: opacity ease-in 200ms;
-        opacity: 0.3;
+      .splide {
+        &__track {
+          background-color: hsl(60, 56%, 91%, 0.2);
+          border-radius: 8px;
+        }
       }
 
-      &:not(:last-of-type)::after {
-        content: '';
-        width: 2px;
+      &__arrows {
+        @include mediaq($bp-small-pc) {
+          width: min-content;
+          position: absolute;
+          right: 0;
+          display: flex;
+          gap: rem(8);
+          transform: translateY(-120%);
+        }
+      }
+
+      &__arrow {
+        $translationX: 120%;
+        $translationY: -50%;
+        $arrowContainerSize: 25px;
+        $arrowIconSize: 15px;
+
+        @include size($arrowContainerSize);
+        padding: 8px;
+        background-color: $primary-light-beige;
+        transition: all ease-in 100ms;
+
+        @include mediaq($bp-small-pc) {
+          top: 0;
+          position: unset;
+        }
+
+        &--prev {
+          left: 0;
+          transform: translate(-$translationX, $translationY);
+
+          @include mediaq($bp-small-pc) {
+            transform: unset;
+          }
+        }
+
+        &--next {
+          right: 0;
+          transform: translate($translationX, $translationY);
+
+          @include mediaq($bp-small-pc) {
+            transform: unset;
+          }
+        }
+      }
+
+    }
+    &__context {
+      height: 100%;
+      & * {
         height: 100%;
-        position: absolute;
-        background-color: white;
-        transform: translateX(-50%);
-        right: 0;
-        top: 0;
-
-        @include mediaq($bp-tablet) {
-          display: none;
-        }
-      }
-
-      &:hover:not(&--is-active) {
-        & > :global(.projectThumbnail) {
-          opacity: .6;
-        }
-      }
-
-      &--is-active {
-        & > :global(.projectThumbnail) {
-          opacity: 1;
-        }
       }
     }
   }
 
-  :global(.projectsShowcase__context) {
+  #thumbnail-carousel {
+    .projectsShowcase {
+      &__thumbnail {
+        border: none;
+      }
+    }
+  }
+
+  :global(.projectsShowcase__thumbnails__pagination) {
+    height: 16px;
+    bottom: 0;
+    transform: translateY(125%);
+    align-items: center;
+  }
+
+  :global(.projectsShowcase__thumbnails__pagination__page) {
+    margin: 0 3px;
+  }
+
+  :global(li.projectsShowcase__thumbnails__pagination__li) {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
   }
 </style>
