--- a/src/components/TechCard.astro
+++ b/src/components/TechCard.astro
@@ -1,18 +1,20 @@
 ---
-import Typography from './Typography.astro';
-import javaScriptSvg from '@assets/svg/javascript.svg';
-import sassSvg from '@assets/svg/sass.svg';
-import gitSvg from '@assets/svg/git.svg';
-import nextJSSvg from '@assets/svg/nextjs.svg';
-import typeScriptSvg from '@assets/svg/typescript.svg';
-import tailwindSvg from '@assets/svg/tailwindcss.svg';
-import reactSvg from '@assets/svg/react.svg';
+import cssSvg from '@assets/svg/css.svg';
+import expressSvg from '@assets/svg/express.svg';
 import firebaseSvg from '@assets/svg/firebase.svg';
+import gitSvg from '@assets/svg/git.svg';
+import html5Svg from '@assets/svg/html5.svg';
+import javaScriptSvg from '@assets/svg/javascript.svg';
 import leafletSvg from '@assets/svg/leaflet.svg';
-import html5Svg from '@assets/svg/html5.svg'
-import cssSvg from '@assets/svg/css.svg'
+import nextJSSvg from '@assets/svg/nextjs.svg';
+import reactSvg from '@assets/svg/react.svg';
+import sassSvg from '@assets/svg/sass.svg';
+import tailwindSvg from '@assets/svg/tailwindcss.svg';
+import typeScriptSvg from '@assets/svg/typescript.svg';
+import type { TechsList } from '@types';
 import { Image } from 'astro:assets';
-import type { TechsList } from '@types'
+
+import Typography from './Typography.astro';
 
 interface Props {
   tech: TechsList
@@ -24,8 +26,8 @@ const { tech, noBullet, vertical } = Astro.props;
 
 const techsSvgMapping = {
   JavaScript: javaScriptSvg,
-  "Next.js": nextJSSvg,
-  "Tailwind CSS": tailwindSvg,
+  'Next.js': nextJSSvg,
+  'Tailwind CSS': tailwindSvg,
   Git: gitSvg,
   React: reactSvg,
   Sass: sassSvg,
@@ -34,18 +36,19 @@ const techsSvgMapping = {
   Leaflet: leafletSvg,
   HTML5: html5Svg,
   CSS: cssSvg,
-}
+  Express: expressSvg,
+};
 
 const techSvg = techsSvgMapping[tech as keyof typeof techsSvgMapping];
 ---
 
 <div class:list={[
-    "techCard",
-    {
-      "techCard--noBullet": noBullet,
-      "techCard--vertical": vertical,
-    }
-  ]}>
+  'techCard',
+  {
+    'techCard--noBullet': noBullet,
+    'techCard--vertical': vertical,
+  },
+]}>
   <span class="techCard__disc" />
   <div class="techCard__content">
     <figure class="techCard__icon">
@@ -75,7 +78,7 @@ const techSvg = techsSvgMapping[tech as keyof typeof techsSvgMapping];
         margin-bottom: 0;
       }
     }
-    
+
     @include mediaq($bp-tablet) {
       max-width: rem(250);
       margin-inline: auto;
