--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -1,8 +1,8 @@
 ---
 import Button from '@components/Button.astro';
 import Container from '@components/Container.astro';
-import Typography from '@components/Typography.astro';
 import SocialLinks from '@components/SocialLinks.astro';
+import Typography from '@components/Typography.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
@@ -16,7 +16,14 @@ const t = useTranslations(lang);
         <Typography as='h2'>
           {t('footer.heading')}
         </Typography>
-        <Button class="footer__mail" as='a' href="mailto:kevhec.dev@gmail.com" noBorder>
+        <Button
+        as='a'
+        class="footer__mail"
+        href="mailto:kevhec.dev@gmail.com"
+        noBorder
+        textOnly
+        font='quicksand'
+        >
           <Typography as="p">
             kevhec.dev@gmail.com
           </Typography>
@@ -55,6 +62,8 @@ const t = useTranslations(lang);
 
     &__mail {
       display: block;
+      text-align: center;
+      width: 100%;
       &:focus {
         outline: 1px solid $neutral-white;
       }
