--- a/src/components/TechCard.astro
+++ b/src/components/TechCard.astro
@@ -8,9 +8,12 @@ import javaScriptSvg from '@assets/svg/javascript.svg';
 import leafletSvg from '@assets/svg/leaflet.svg';
 import nextJSSvg from '@assets/svg/nextjs.svg';
 import nodeSvg from '@assets/svg/node.svg';
+import postgresSvg from '@assets/svg/postgres.svg';
 import reactSvg from '@assets/svg/react.svg';
+import reactRouterSvg from '@assets/svg/reactRouter.svg';
 import sassSvg from '@assets/svg/sass.svg';
 import sequelizeSvg from '@assets/svg/sequelize.svg';
+import shadcnSvg from '@assets/svg/shadcn.svg';
 import tailwindSvg from '@assets/svg/tailwindcss.svg';
 import typeScriptSvg from '@assets/svg/typescript.svg';
 import type { TechsList } from '@types';
@@ -41,6 +44,9 @@ const techsSvgMapping = {
   Express: expressSvg,
   Node: nodeSvg,
   Sequelize: sequelizeSvg,
+  'Postgres SQL': postgresSvg,
+  'React router': reactRouterSvg,
+  Shadcn: shadcnSvg,
 };
 
 const techSvg = techsSvgMapping[tech as keyof typeof techsSvgMapping];
