--- a/src/components/projectPage/ProjectHeader.astro
+++ b/src/components/projectPage/ProjectHeader.astro
@@ -1,46 +1,74 @@
 ---
 import Button from '@components/Button.astro';
 import Typography from '@components/Typography.astro';
-import { Image } from 'astro:assets';
-import DemoLinkButton from './DemoLinkButton.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import { Image } from 'astro:assets';
+import type { CollectionEntry } from 'astro:content';
+
+import DemoLinkButton from './DemoLinkButton.astro';
 import GoBackArrow from './GoBackArrow.astro';
 import List from './List.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
+interface Props {
+  project: CollectionEntry<'projects'>
+}
+
 const { project } = Astro.props;
+
+const {
+  data: {
+    mockup,
+    mockupAlt,
+    projectName,
+    wasForClient,
+    description,
+    demoLink,
+    stack,
+    comingSoon,
+  },
+} = project;
 ---
 
 <div class="projectHeader">
   <div class="projectHeader__heading">
     <Button as="a" iconOnly href={`/${lang}/`} class="projectHeader__goBack">
       <GoBackArrow />
-      <span class="visually-hidden">{t("project.goBack")}</span>
+      <span class="visually-hidden">{t('project.goBack')}</span>
     </Button>
     <Typography as='h1' class="projectHeader__name">
-      {project.data.projectName}
+      {projectName}
     </Typography>
   </div>
   <div class="projectHeader__description">
-    <Image src={project.data.mockup} alt={project.data.mockupAlt} class="projectHeader__mockup" />
+    <Image src={mockup} alt={mockupAlt} class="projectHeader__mockup" />
     <div class="projectHeader__meta">
       <div>
         <Typography as="h3" class="projectHeader__metaHeading semibold">
-          { project.data.wasForClient ? t("project.clientLabel") : t("project.personalLabel") }
+          { wasForClient ? t('project.clientLabel') : t('project.personalLabel') }
         </Typography>
         <Typography as="p">
-          { project.data.description }
+          { description }
         </Typography>
-        <DemoLinkButton href={project.data.demoLink} />
+        {
+          comingSoon ? (
+            <Typography weight={'bold'} as='p'>
+              <br/>
+              { t('under-development') }
+            </Typography>
+          ) : (
+            <DemoLinkButton href={demoLink ?? '#'} />
+          )
+        }
       </div>
       <div>
         <Typography as="h3" class="projectHeader__metaHeading semibold">
-          Technologies
+          {t('technologies.heading')}
         </Typography>
         <List>
-          {project.data.stack.map((tech: string) => (
+          {stack.map((tech: string) => (
             <li>{tech}</li>
           ))}
         </List>
@@ -53,7 +81,6 @@ const { project } = Astro.props;
 
   .projectHeader {
 
-  
     &__heading {
       display: flex;
       position: relative;
