--- a/src/components/projectPage/ProjectHeader.astro
+++ b/src/components/projectPage/ProjectHeader.astro
@@ -1,9 +1,10 @@
 ---
 import Button from '@components/Button.astro';
 import Typography from '@components/Typography.astro';
-import { Image } from 'astro:assets';
-import DemoLinkButton from './DemoLinkButton.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import { Image } from 'astro:assets';
+
+import DemoLinkButton from './DemoLinkButton.astro';
 import GoBackArrow from './GoBackArrow.astro';
 import List from './List.astro';
 
@@ -17,7 +18,7 @@ const { project } = Astro.props;
   <div class="projectHeader__heading">
     <Button as="a" iconOnly href={`/${lang}/`} class="projectHeader__goBack">
       <GoBackArrow />
-      <span class="visually-hidden">{t("project.goBack")}</span>
+      <span class="visually-hidden">{t('project.goBack')}</span>
     </Button>
     <Typography as='h1' class="projectHeader__name">
       {project.data.projectName}
@@ -28,7 +29,7 @@ const { project } = Astro.props;
     <div class="projectHeader__meta">
       <div>
         <Typography as="h3" class="projectHeader__metaHeading semibold">
-          { project.data.wasForClient ? t("project.clientLabel") : t("project.personalLabel") }
+          { project.data.wasForClient ? t('project.clientLabel') : t('project.personalLabel') }
         </Typography>
         <Typography as="p">
           { project.data.description }
@@ -53,7 +54,6 @@ const { project } = Astro.props;
 
   .projectHeader {
 
-  
     &__heading {
       display: flex;
       position: relative;
